[package]
name = "spark-os"
version = "0.1.0"
authors = ["Mert Sefa AKGUN <git@msakg.com>"]
edition = "2021"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
